data/derived/comb/progs/unify/prog8781.ml.out
Characters 79-82:
  | h::t -> matchHeads (["b"; "o"; "b"]) (listReverse (explode w));;
                         ^^^
Error: This expression has type string but an expression was expected of type
         'a list
